MOW-1434 Spotbugs, Checkstyle fixes.